// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageDataTable Component RENDERS component with filled props 1`] = `
<DocumentFragment>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Url
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            http://example.com
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Width
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            1080
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Height
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            768
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            XResolution
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            72
          </td>
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            YResolution
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            72
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`ImageDataTable Component RENDERS component without any filled props 1`] = `
<DocumentFragment>
  <div
    class="MuiTableContainer-root"
  >
    <table
      class="MuiTable-root"
    >
      <tbody
        class="MuiTableBody-root"
      >
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Url
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Width
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            Height
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            XResolution
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
        </tr>
        <tr
          class="MuiTableRow-root"
        >
          <td
            class="MuiTableCell-root MuiTableCell-body"
          >
            YResolution
          </td>
          <td
            class="MuiTableCell-root MuiTableCell-body"
          />
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
